--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="The hub for all things UNC CSSG + education!"
+      name="Itemizer"
+      content="neat looking list"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo192.png" />
     <!--
